chore(ci): Fix actionlint

--- a/.github/actions/setup_rust_toolchain_for_concrete_cpu/action.yml
+++ b/.github/actions/setup_rust_toolchain_for_concrete_cpu/action.yml
@@ -1,3 +1,7 @@
+name: Setup rust toolchain for concrete-cpu
+
+description: Setup rust toolchain for concrete-cpu
+
 runs:
   using: "composite"
   steps:
