--- a/.github/workflows/concrete_python_release_cpu.yml
+++ b/.github/workflows/concrete_python_release_cpu.yml
@@ -77,13 +77,13 @@ jobs:
         run: |
           NIGHTLY_VERSION=$(date +"%Y.%m.%d")
           NIGHTLY_VERSION_ONE_NUMBER=$(date +"%Y%m%d")
-          LATEST_RELEASE_VERSION=`git tag -l |grep "v.*" |sort |tail -n 1 | grep -e '[0-9].*' -o`
+          LATEST_RELEASE_VERSION=$(git tag -l |grep "v.*" |sort |tail -n 1 | grep -e '[0-9].*' -o)
           echo "__version__ = \"${LATEST_RELEASE_VERSION}-dev${NIGHTLY_VERSION_ONE_NUMBER}\"" >| frontends/concrete-python/version.txt
-          git tag nightly-$NIGHTLY_VERSION || true
-          git push origin nightly-$NIGHTLY_VERSION || true
+          git tag "nightly-${NIGHTLY_VERSION}" || true
+          git push origin "nightly-${NIGHTLY_VERSION}" || true
       - name: Set release version (public)
         if: ${{ env.RELEASE_TYPE == 'public' }}
-        run: echo "__version__ = \"`git describe --tags --abbrev=0 | grep -e '[0-9].*' -o`\"" >| frontends/concrete-python/version.txt
+        run: echo "__version__ = \"$(git describe --tags --abbrev=0 | grep -e '[0-9].*' -o)\"" >| frontends/concrete-python/version.txt
       - name: Expose release version from Python
         run: cp frontends/concrete-python/version.txt frontends/concrete-python/concrete/fhe/version.py
       - name: Build wheel
@@ -154,23 +154,22 @@ jobs:
         run: |
           brew install ninja ccache
       - name: Setup rust toolchain for concrete-cpu
-        uses: ./.github/workflows/setup_rust_toolchain_for_concrete_cpu
+        uses: ./.github/actions/setup_rust_toolchain_for_concrete_cpu
       - name: Set release version (nightly)
         if: ${{ env.RELEASE_TYPE == 'nightly' }}
         run: |
-          NIGHTLY_VERSION=$(date +"%Y.%m.%d")
-          NIGHTLY_VERSION_ONE_NUMBER=$(date +"%Y%m%d")
-          LATEST_RELEASE_VERSION=`git tag -l |grep "v.*" |sort |tail -n 1 | grep -e '[0-9].*' -o`
-          echo "__version__ = \"${LATEST_RELEASE_VERSION}-dev${NIGHTLY_VERSION_ONE_NUMBER}\"" >| frontends/concrete-python/version.txt
+          NIGHTLY_VERSION=$(date +"%Y%m%d")
+          LATEST_RELEASE_VERSION=$(git tag -l |grep "v.*" |sort |tail -n 1 | grep -e '[0-9].*' -o)
+          echo "__version__ = \"${LATEST_RELEASE_VERSION}-dev${NIGHTLY_VERSION}\"" >| frontends/concrete-python/version.txt
       - name: Set release version (public)
         if: ${{ env.RELEASE_TYPE == 'public' }}
-        run: echo "__version__ = \"`git describe --tags --abbrev=0 | grep -e '[0-9].*' -o`\"" >| frontends/concrete-python/version.txt
+        run: echo "__version__ = \"$(git describe --tags --abbrev=0 | grep -e '[0-9].*' -o)\"" >| frontends/concrete-python/version.txt
       - name: Expose release version from Python
         run: cp frontends/concrete-python/version.txt frontends/concrete-python/concrete/fhe/version.py
       - name: Build wheel
         run: |
-          export CONCRETE_PYTHON=$(pwd)/frontends/concrete-python
-          export CONCRETE_COMPILER=$(pwd)/compilers/concrete-compiler/compiler
+          CONCRETE_PYTHON=$(pwd)/frontends/concrete-python
+          CONCRETE_COMPILER=$(pwd)/compilers/concrete-compiler/compiler
           export COMPILER_BUILD_DIRECTORY=$CONCRETE_COMPILER/build
           export PYTHON=${{ format('python{0}', matrix.python-version) }}
           echo "Using $PYTHON"
@@ -183,17 +182,17 @@ jobs:
           $PYTHON -m venv .venv && . .venv/bin/activate
 
           # Install requirements
-          pip install -r $CONCRETE_PYTHON/requirements.txt
-          pip install -r $CONCRETE_PYTHON/requirements.dev.txt
+          pip install -r "${CONCRETE_PYTHON}"/requirements.txt
+          pip install -r "${CONCRETE_PYTHON}"/requirements.dev.txt
 
           # Build python bindings of concrete compiler
-          cd $CONCRETE_COMPILER
+          cd "${CONCRETE_COMPILER}" || exit
           echo "Debug: ccache statistics (prior to the build):" && ccache -s
-          make Python3_EXECUTABLE=$(which python) python-bindings
+          make Python3_EXECUTABLE="$(which python)" python-bindings
           echo "Debug: ccache statistics (after the build):" && ccache -s
 
           # Build wheel
-          cd $CONCRETE_PYTHON
+          cd "${CONCRETE_PYTHON}" || exit
           rm -rf dist
           mkdir -p dist
           pip wheel -v --no-deps -w dist .
@@ -228,7 +227,7 @@ jobs:
           merge-multiple: true
       - name: generate hash
         id: hash
-        run: cd frontends/concrete-python/dist && echo "hash=$(sha256sum *.whl | base64 -w0)" >> $GITHUB_OUTPUT
+        run: cd frontends/concrete-python/dist && echo "hash=$(sha256sum ./*.whl | base64 -w0)" >> "${GITHUB_OUTPUT}"
 
   provenance:
     needs: [hash]
@@ -260,12 +259,13 @@ jobs:
       - name: create draft release
         if: ${{ env.RELEASE_TYPE == 'public'}}
         run: |
-          export TAG=$(git describe --tags --abbrev=0)
-          echo $TAG
+          TAG=$(git describe --tags --abbrev=0)
+          export TAG
+          echo "${TAG}"
           gh release create --draft --repo ${{ github.repository }} \
-          --verify-tag $TAG \
-          --title $TAG \
-          wheels/* *.intoto.jsonl/*
+          --verify-tag "${TAG}" \
+          --title "${TAG}" \
+          wheels/* ./*.intoto.jsonl/*
         env:
           GH_TOKEN: ${{ github.token }}
       - name: Upload wheels to S3
@@ -279,7 +279,7 @@ jobs:
         run: |
           pip install boto3 bigtree
           # upload wheels
-          aws s3 sync ./wheels/ s3://${S3_BUCKET_NAME}/cpu/concrete-python
+          aws s3 sync ./wheels/ "s3://${S3_BUCKET_NAME}/cpu/concrete-python"
           # update indexes and invalidate cloudfront cache
           python .github/workflows/scripts/s3_update_html_indexes.py
       - name: Slack Notification
@@ -323,24 +323,24 @@ jobs:
           CONCRETE_PYTHON=$(pwd)/repo/frontends/concrete-python
 
           # Initialize an empty test environment
-          cd $(mktemp -d)
+          cd "$(mktemp -d)"
           python -m venv .testenv && source .testenv/bin/activate
 
           # Install the concrete-python wheel
-          pip install $WHEEL_DIR/*.whl
+          pip install "${WHEEL_DIR}"/*.whl
 
           # Install extra requirements for tests
           sudo apt update -y
           sudo apt install -y graphviz libgraphviz-dev
-          pip install -r $CONCRETE_PYTHON/requirements.extra-full.txt
-          pip install -r $CONCRETE_PYTHON/requirements.dev.txt
+          pip install -r "${CONCRETE_PYTHON}"/requirements.extra-full.txt
+          pip install -r "${CONCRETE_PYTHON}"/requirements.dev.txt
 
           # TODO - check for version
 
           # Copy test files
-          cp -R $CONCRETE_PYTHON/tests .
-          cp -R $CONCRETE_PYTHON/pytest.ini .
-          cp $CONCRETE_PYTHON/Makefile .
+          cp -R "${CONCRETE_PYTHON}"/tests .
+          cp -R "${CONCRETE_PYTHON}"/pytest.ini .
+          cp "${CONCRETE_PYTHON}"/Makefile .
 
           # Running tests
           make tfhers-utils
@@ -402,27 +402,27 @@ jobs:
           PYTHON=${{ format('python{0}', matrix.python-version) }}
 
           # Initialize an empty test environment
-          export TEST_TMP_DIR=$(mktemp -d)
-          echo "TEST_TMP_DIR=$TEST_TMP_DIR" >> "${GITHUB_ENV}"
-          cd $TEST_TMP_DIR
+          TEST_TMP_DIR=$(mktemp -d)
+          echo "TEST_TMP_DIR=${TEST_TMP_DIR}" >> "${GITHUB_ENV}"
+          cd "${TEST_TMP_DIR}" || exit
 
           # Activate virtual environment
           $PYTHON -m venv .testenv && source .testenv/bin/activate
 
           # Install extra requirements for tests
-          pip install $WHEEL_DIR/*macos*.whl
-          pip install -r $CONCRETE_PYTHON/requirements.dev.txt
+          pip install "${WHEEL_DIR}"/*macos*.whl
+          pip install -r "${CONCRETE_PYTHON}"/requirements.dev.txt
 
           # MacOS x86 have conflict between our OpenMP library, and one from torch
           # we fix it by using a single one (from torch)
           # see discussion: https://discuss.python.org/t/conflicting-binary-extensions-in-different-packages/25332/8
-          export SITE_PACKAGES=$(pwd)/.testenv/lib/$PYTHON_VERSION/site-packages/
-          find $SITE_PACKAGES -not \( -path $SITE_PACKAGES/concrete -prune \) -name 'lib*omp5.dylib' -or -name 'lib*omp.dylib' | xargs -n 1  ln -f -s $SITE_PACKAGES/concrete/.dylibs/libomp.dylib
+          SITE_PACKAGES=$(pwd)/.testenv/lib/$PYTHON_VERSION/site-packages/
+          find . "${SITE_PACKAGES}" \( -not \( -path "${SITE_PACKAGES}"/concrete -prune \) -name 'lib*omp5.dylib' -or -name 'lib*omp.dylib' \) -exec -n 1  ln -f -s "${SITE_PACKAGES}"/concrete/.dylibs/libomp.dylib {} \;
 
           # Copy test files
-          cp -R $CONCRETE_PYTHON/tests .
-          cp -R $CONCRETE_PYTHON/pytest.ini .
-          cp $CONCRETE_PYTHON/Makefile .
+          cp -R "${CONCRETE_PYTHON}"/tests .
+          cp -R "${CONCRETE_PYTHON}"/pytest.ini .
+          cp "${CONCRETE_PYTHON}"/Makefile .
 
           # Running tests
           make tfhers-utils
@@ -431,7 +431,7 @@ jobs:
       - name: Cleanup host
         if: success() || failure()
         run: |
-          rm -rf $TEST_TMP_DIR
+          rm -rf "${TEST_TMP_DIR}"
       - name: Slack Notification
         if: ${{ failure() }}
         continue-on-error: true
