--- a/frontends/concrete-python/tests/tfhers-utils/Cargo.toml
+++ b/frontends/concrete-python/tests/tfhers-utils/Cargo.toml
@@ -11,6 +11,9 @@ serde_json = "1.0.128"
 
 clap = { version = "4.5.16", features = ["derive"] }
 
+concrete_quantizer = { git = "https://github.com/zama-ai/concrete-ml-processing-rs" }
+ndarray = "0.16.1"
+
 tfhe = { version = "0.10.0", features = ["integer"] }
 
 [target.x86_64-unknown-linux-gnu.dependencies]
