fix(ci): copy examples in test env

--- a/.github/workflows/concrete_python_release_cpu.yml
+++ b/.github/workflows/concrete_python_release_cpu.yml
@@ -342,6 +342,7 @@ jobs:
 
           # Copy test files
           cp -R "${CONCRETE_PYTHON}"/tests .
+          cp -R "${CONCRETE_PYTHON}"/examples .
           cp -R "${CONCRETE_PYTHON}"/pytest.ini .
           cp "${CONCRETE_PYTHON}"/Makefile .
 
@@ -420,6 +421,7 @@ jobs:
 
           # Copy test files
           cp -R "${CONCRETE_PYTHON}"/tests .
+          cp -R "${CONCRETE_PYTHON}"/examples .
           cp -R "${CONCRETE_PYTHON}"/pytest.ini .
           cp "${CONCRETE_PYTHON}"/Makefile .
 
