--- a/.github/workflows/concrete_compiler_test_cpu_distributed.yml
+++ b/.github/workflows/concrete_compiler_test_cpu_distributed.yml
@@ -2,15 +2,14 @@ name: concrete-compiler test linux-cpu-distributed
 
 on:
   workflow_dispatch:
-  # Temporary disabled since need slab update
-  # pull_request:
-  #   paths:
-  #     - .github/workflows/concrete_compiler_test_cpu_distributed.yml
-  #     - compilers/concrete-compiler/**
-  # push:
-  #   branches:
-  #     - 'main'
-  #     - 'release/*'
+  pull_request:
+    paths:
+      - .github/workflows/concrete_compiler_test_cpu_distributed.yml
+      - compilers/concrete-compiler/**
+  push:
+    branches:
+      - 'main'
+      - 'release/*'
 
 env:
   ACTION_RUN_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
@@ -25,12 +24,10 @@ concurrency:
 jobs:
   setup-instance:
     runs-on: ubuntu-latest
-    outputs:
-      runner-name: ${{ steps.start-instance.outputs.label }}
     steps:
       - name: Start instance
         id: start-instance
-        uses: zama-ai/slab-github-runner@447a2d0fd2d1a9d647aa0d0723a6e9255372f261
+        uses: zama-ai/slab-github-runner@98f0788261a7323d5d695a883e20df36591a92b7 # v1.3.0
         with:
           mode: start
           github-token: ${{ secrets.SLAB_ACTION_TOKEN }}
@@ -93,13 +90,13 @@ jobs:
     steps:
       - name: Stop instance
         id: stop-instance
-        uses: zama-ai/slab-github-runner@c0e7168795bd78f61f61146951ed9d0c73c9b701
+        uses: zama-ai/slab-github-runner@98f0788261a7323d5d695a883e20df36591a92b7 # v1.3.0
         with:
           mode: stop
           github-token: ${{ secrets.SLAB_ACTION_TOKEN }}
           slab-url: ${{ secrets.SLAB_BASE_URL }}
           job-secret: ${{ secrets.JOB_SECRET }}
-          label: ${{ needs.setup-instance.outputs.runner-name }}
+          label: distributed-ci
 
       - name: Slack Notification
         if: ${{ failure() }}
