--- a/.github/workflows/concrete_compiler_test_macos_cpu.yml
+++ b/.github/workflows/concrete_compiler_test_macos_cpu.yml
@@ -33,6 +33,9 @@ jobs:
         runson: ["aws-mac1-metal", "aws-mac2-metal"]
         python-version: ["3.10"]
     runs-on: ${{ matrix.runson }}
+    outputs:
+      slack_message: ${{ steps.prepare_slack_notif.outputs.slack_message }}
+      slack_color: ${{ steps.prepare_slack_notif.outputs.slack_color }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
@@ -82,10 +85,22 @@ jobs:
         if: success() || failure()
         run: |
          rm -rf "${KEY_CACHE_DIRECTORY}"
-      - name: Slack Notification
+      - name: Prepare Slack Notification
+        id: prepare_slack_notif
         if: ${{ failure() && github.ref == 'refs/heads/main' }}
         continue-on-error: true
+        run: |
+          echo "slack_message=build-and-test(macos) finished with status: ${{ job.status }}. (${{ env.ACTION_RUN_URL }})" >> "$GITHUB_OUTPUT"
+          echo "slack_color=${{ job.status }}" >> "$GITHUB_OUTPUT"
+
+  slack-notif-macos:
+    needs: ["build-and-test"]
+    runs-on: "ubuntu-latest"
+    steps:
+      - name: Slack Notification
+        # we want to check that prepare_slack_notif was run
+        if: ${{ needs.build-and-test.outputs.slack_color != '' }}
         uses: rtCamp/action-slack-notify@c33737706dea87cd7784c687dadc9adf1be59990
         env:
-          SLACK_COLOR: ${{ job.status }}
-          SLACK_MESSAGE: "build-and-test finished with status: ${{ job.status }}. (${{ env.ACTION_RUN_URL }})"
+          SLACK_COLOR: ${{ needs.build-and-test.outputs.slack_color }}
+          SLACK_MESSAGE: ${{ needs.build-and-test.outputs.slack_message }}
