--- a/.github/workflows/concrete_python_release_cpu.yml
+++ b/.github/workflows/concrete_python_release_cpu.yml
@@ -450,6 +450,7 @@ jobs:
   slack-notif-macos:
     needs: ["test-macos"]
     runs-on: "ubuntu-latest"
+    if: always()
     steps:
       - name: Slack Notification
         # we want to check that prepare_slack_notif was run
