--- a/.github/workflows/concrete_python_test_macos.yml
+++ b/.github/workflows/concrete_python_test_macos.yml
@@ -122,6 +122,7 @@ jobs:
   slack-notif-macos:
     needs: ["concrete-python-test-pytest"]
     runs-on: "ubuntu-latest"
+    if: always()
     steps:
       - name: Slack Notification
         # we want to check that prepare_slack_notif was run
