--- a/.github/workflows/concrete_python_tests_linux.yml
+++ b/.github/workflows/concrete_python_tests_linux.yml
@@ -91,17 +91,30 @@ jobs:
 
             echo "Debug: ccache statistics (after the build):"
             ccache -s
-      - name: Create artifact archive
-        run: |
-            cd build
-            tar czvf artifacts.tgz lib/libConcretelangRuntime.so tools/concretelang/python_packages
+
+            for f in $(find /build/tools/concretelang/python_packages/concretelang_core/ -type l);
+            do
+              cp --remove-destination $(readlink -e $f) $f
+            done
+
+            cd /concrete/frontends/concrete-python
+            export COMPILER_BUILD_DIRECTORY="/build"
+            make whl
       - name: Upload concrete-compiler python-bindings
         uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4.4.3
         with:
           name: concrete-compiler-python-bindings
           include-hidden-files: true
           retention-days: 3
-          path: build/artifacts.tgz
+          path: |
+            ./build/lib/libConcretelangRuntime.so
+            ./build/tools/concretelang/python_packages/
+      - name: Upload wheel
+        uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4.4.3
+        with:
+          name: concrete-python-wheel
+          path: frontends/concrete-python/dist/*manylinux*.whl
+          retention-days: 3
       - name: Slack Notification
         if: ${{ failure() && github.ref == 'refs/heads/main' }}
         continue-on-error: true
@@ -109,6 +122,47 @@ jobs:
         env:
           SLACK_COLOR: ${{ job.status }}
           SLACK_MESSAGE: "build-python-bindings finished with status: ${{ job.status }}. (${{ env.ACTION_RUN_URL }})"
+
+  test-apidoc-up-to-date:
+    needs: [ build-python-bindings ]
+    runs-on: ubuntu-latest
+    env:
+      python-version: 3.8
+    steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          submodules: recursive
+          fetch-depth: 0
+      - name: Setup Python
+        uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
+        with:
+          python-version: ${{ env.python-version }}
+      - name: Download concrete-compiler python-bindings
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
+        with:
+          name: concrete-python-wheel
+          path: wheel
+      - name: Check documentation
+        run: |
+          WHEEL_DIR=${{ github.workspace }}/wheel
+          CONCRETE_WHEEL="${WHEEL_DIR}/*.whl" .github/workflows/scripts/make_apidocs.sh
+      - name: Upload docs.patch if failure
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 # v4.4.0
+        with:
+          name: docs-artifacts
+          path: |
+            docs.patch
+            docs/dev/api
+          retention-days: 3
+      - name: Slack Notification
+        if: ${{ failure() && github.ref == 'refs/heads/main' }}
+        continue-on-error: true
+        uses: rtCamp/action-slack-notify@c33737706dea87cd7784c687dadc9adf1be59990
+        env:
+          SLACK_COLOR: ${{ job.status }}
+          SLACK_MESSAGE: "test-apidoc-up-to-date finished with status: ${{ job.status }}. (${{ env.ACTION_RUN_URL }})"
 
   test-pytest:
     needs: [setup-instance, build-python-bindings]
@@ -119,10 +173,6 @@ jobs:
         with:
           name: concrete-compiler-python-bindings
           path: compiler-artifacts
-      - name: Extract artifacts archive
-        run: |
-          cd compiler-artifacts
-          tar xzvf artifacts.tgz
       - name: Run pytest
         uses: addnab/docker-run-action@4f65fabd2431ebc8d299f8e5a018d79a769ae185 # v3
         with:
@@ -159,10 +209,6 @@ jobs:
         with:
           name: concrete-compiler-python-bindings
           path: compiler-artifacts
-      - name: Extract artifacts archive
-        run: |
-          cd compiler-artifacts
-          tar xzvf artifacts.tgz
       - name: Run pytest
         uses: addnab/docker-run-action@4f65fabd2431ebc8d299f8e5a018d79a769ae185 # v3
         with:
