--- a/frontends/concrete-python/pytest.ini
+++ b/frontends/concrete-python/pytest.ini
@@ -2,3 +2,4 @@
 markers =
 	dataflow: mark the test as using dataflow parallelization.
 	graphviz: mark the test using graphviz package
+	minimal: mark the minimal test to run
