chore(ci): Fix macos notebook test

--- a/.github/workflows/concrete_python_test_macos.yml
+++ b/.github/workflows/concrete_python_test_macos.yml
@@ -95,6 +95,7 @@ jobs:
 
           cp -R ${{ env.concrete-python-dir }}/examples ./examples
           cp -R ${{ env.concrete-python-dir }}/tests ./tests
+          cp -R ${{ env.concrete-python-dir }}/scripts ./scripts
 
           cp ${{ env.concrete-python-dir }}/Makefile .
       - name: Run pytest-macos
