--- a/.github/workflows/concrete_python_tests_linux.yml
+++ b/.github/workflows/concrete_python_tests_linux.yml
@@ -87,7 +87,7 @@ jobs:
             source .venv/bin/activate
 
             cd /concrete/compilers/concrete-compiler/compiler
-            make BUILD_DIR=/build DATAFLOW_EXECUTION_ENABLED=ON CCACHE=ON Python3_EXECUTABLE=$(which python3) python-bindings
+            make BUILD_DIR=/build DATAFLOW_EXECUTION_ENABLED=ON CCACHE=ON Python3_EXECUTABLE=$(which python) python-bindings
 
             echo "Debug: ccache statistics (after the build):"
             ccache -s
@@ -124,10 +124,10 @@ jobs:
           SLACK_MESSAGE: "build-python-bindings finished with status: ${{ job.status }}. (${{ env.ACTION_RUN_URL }})"
 
   test-apidoc-up-to-date:
-    needs: [ build-python-bindings ]
+    needs: [build-python-bindings]
     runs-on: ubuntu-latest
     env:
-      python-version: 3.8
+      python-version: "3.8"
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -145,8 +145,9 @@ jobs:
           path: wheel
       - name: Check documentation
         run: |
-          WHEEL_DIR=${{ github.workspace }}/wheel
-          CONCRETE_WHEEL="${WHEEL_DIR}/*.whl" .github/workflows/scripts/make_apidocs.sh
+          export WHEEL_DIR=${{ github.workspace }}/wheel
+          export CONCRETE_WHEEL="${WHEEL_DIR}/*.whl"
+          .github/workflows/scripts/make_apidocs.sh
       - name: Upload docs.patch if failure
         if: ${{ failure() }}
         uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 # v4.4.0
